infra/kube/apps/caregiver/deployment.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caregiver
  namespace: caregiver
  labels:
    app: caregiver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: caregiver
  template:
    metadata:
      labels:
        app: caregiver
    spec:
      imagePullSecrets:
        - name: docker-pull-secret
      containers:
        - name: caregiver
          image: harbor.hatarakiassistant.com/docker/caregiver:0.6.0
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
