infra/kube/apps/caregiver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: caregiver
  namespace: caregiver
spec:
  selector:
    app: caregiver
  ports:
    - port: 8000
      targetPort: 8000
